applications/base/umami/umami-public-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami-public
  namespace: umami
  labels:
    external-dns-enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: abbottland.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: istio-ingress-public
      namespace: istio-system
      sectionName: https-public
  hostnames:
    - "analytics.abbottland.io"
  rules:
    - matches:
        - path:
            type: Exact
            value: /script.js
      backendRefs:
        - name: umami
          port: 80
    - matches:
        - path:
            type: Exact
            value: /api/send
      backendRefs:
        - name: umami
          port: 80
